# CS316

./: CS316_1_5.sln  CS316_1_5.vcxproj  CS316_1_5.vcxproj.filters  Expression.h  Fact.cpp  Operation.cpp  Operation.h  Parser.cpp  Parser.h  REPL.cpp  REPL.h  Term.cpp  Term.h  Then.cpp  Then.h  main.cpp
Task1/Classes/Language/: Boolean.cpp  Boolean.h  Check.cpp  Check.h  DataType.cpp  DataType.h  Environment.cpp  Environment.h  Expression.cpp  Expression.h  Fact.cpp  Fact.h  FromFile.cpp  FromFile.h  HelpMessage.cpp  HelpMessage.h  Operation.h  Parser.cpp  Rule.cpp  Rule.h  Term.h  Then.cpp  Then.h  Unit.cpp  Unit.h
Task1/Classes/REPL/: REPL.cpp  REPL.h  main.cpp
Task2/: .gitignore  CMakeLists.txt
Task2/Classes/Demo/: main.cpp
Task2/Classes/MyMatrix/: Matrix.h  Matrix_Impl.h  SharedPointer.h
Task3/: CMakeLists.txt
Task3/Classes/Demo/: main.cpp  main.cpp.s27189
Task3/Classes/GameOfLife/: World.cpp  World.h
Task4/: CMakeLists.txt
Task4/Classes/Demo/: main.cpp
Task4/Classes/GameOfLife/: World.cpp  World.h
Task4/Classes/MagicRect/: MagicRect.h
Task5/: CMakeLists.txt
Task5/Classes/Demo/: main.cpp
Task5/Classes/Types/: Dispatchers.h  Types.h
